Graphs for Diversity Index

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -42,8 +42,8 @@
     "Group members:\n",
     "- Chaehui Kim (M250132)\n",
     "- Eugene Phang (EPHANG002)\n",
-    "- Abhinav Kiran Korety ()\n",
-    "- Kwan Wei Yin Joel ()\n",
+    "- Abhinav Kiran Korety (ABHINAVK001)\n",
+    "- Kwan Wei Yin Joel (KWAN0077)\n",
     "- Daniel Sutjipto (DANI0064)"
    ]
   },
@@ -219,14 +219,14 @@
     "        data_to_compare = Tlist_of_data\n",
     "    else:\n",
     "        # Convert CGPA strings to floats \n",
-    "        list_of_CGPA_float = [float(i) for i in data_to_compare_raw[2]]\n",
+    "        list_of_CGPA_float2 = [float(i) for i in data_to_compare_raw[2]]\n",
     "\n",
     "        # convert boolean list to string list fo Female = 0 and male = 1\n",
-    "        Gender_list_string = ['Male' if g is True else 'Female' for g in data_to_compare_raw[0]]\n",
+    "        Gender_list_string2 = ['Male' if g is True else 'Female' for g in data_to_compare_raw[0]]\n",
     "        #print(Gender_list_string)\n",
     "\n",
     "        #adding all lists to a List for easy access\n",
-    "        data_to_compare = [Gender_list_string, data_to_compare_raw[1], list_of_CGPA_float]\n",
+    "        data_to_compare = [Gender_list_string2, data_to_compare_raw[1], list_of_CGPA_float2]\n",
     "        # iterate through list to get gender and school data counts only\n",
     "    for i, data in enumerate(Tlist_of_data[:2]):\n",
     "        unq_data_list = list(set(data_to_compare[i]))\n",
@@ -236,7 +236,7 @@
     "            count = data.count(string)\n",
     "            data_count.append(count) \n",
     "            total += count\n",
-    "            print(f\"{string}: {count}\")\n",
+    "            #print(f\"{string}: {count}\")\n",
     "        Tlist_of_rawdata.append(data_count)\n",
     "        list_of_labels.append(unq_data_list)\n",
     "    Tlist_of_rawdata.append(list_of_CGPA_float)\n",
@@ -244,11 +244,7 @@
     "    #print(list_of_labels)\n",
     "     \n",
     "    return Tlist_of_rawdata, list_of_labels\n",
-    "\n",
-    "# data_tg1_G_S_C = getdataintolist(Data_tg1)\n",
-    "# whole_schoool_G_S_C = getdataintolist(whole_school)\n",
-    "\n",
-    "# data_prep = (data_tg1_G_S_C, whole_schoool_G_S_C)"
+    "\n"
    ]
   },
   {
@@ -331,6 +327,7 @@
    "outputs": [],
    "source": [
     "def Box_whisker(CGPA, labels = None):\n",
+    "    print(CGPA)\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.boxplot(CGPA,tick_labels=labels, patch_artist=True)\n",
     "    plt.title(\"Boxplot of CGPA\", fontsize=20)"
@@ -384,7 +381,7 @@
    "source": [
     "all_tgs = sorted(set(s['TG'] for s in studentData))\n",
     "\n",
-    "def Graphs_for_TG(tg_number,graph_type,compare = None):\n",
+    "def Graphs_for_TG(tg_number,compare = None):\n",
     "    tg_students = []\n",
     "    for y in studentData:\n",
     "        tg = y['TG']\n",
@@ -395,19 +392,19 @@
     "\n",
     "    T_list_tg,label_tg = data_prep(T_raw_list,compare)\n",
     "\n",
-    "    #choose which graph to produce\n",
-    "    if graph_type == 'pie':\n",
-    "      pie_chart(T_list_tg[0],label_tg[0])\n",
-    "    if graph_type == 'bar':\n",
-    "       bar_chart(T_list_tg[1],label_tg[1])\n",
-    "    if graph_type == 'box':\n",
-    "        Box_whisker(T_list_tg[2])\n",
+    "    # #choose which graph to produce\n",
+    "    # if graph_type == 'pie':\n",
+    "    #   pie_chart(T_list_tg[0],label_tg[0])\n",
+    "    # if graph_type == 'bar':\n",
+    "    #    bar_chart(T_list_tg[1],label_tg[1])\n",
+    "    # if graph_type == 'box':\n",
+    "    #     Box_whisker(T_list_tg[2])\n",
     "\n",
     "    return T_list_tg, label_tg, T_raw_list\n",
     "\n",
-    "T_list_all, label_all, Tg_raw_list = Graphs_for_TG(2,'pie', All_raw_list)\n",
+    "T_list_all, label_all, Tg_raw_list = Graphs_for_TG(2, All_raw_list)\n",
     "\n",
-    "print(T_list_all)"
+    "# print(T_list_all)"
    ]
   },
   {
@@ -917,10 +914,15 @@
    "id": "8c2d2df1",
    "metadata": {},
    "source": [
-    "Tut, grp, sample mabye?\n",
+    "# Takes a specific Tutorial Group number (e.g., TG 1) and a chosen graph type ('pie', 'bar', or 'box').\n",
     "\n",
-    "which graph you want to compare\n",
-    "\n"
+    "Extracts data for each sub-group inside that TG,\n",
+    "\n",
+    "Prepares their statistics via helper functions (getdataintolist, data_prep, Graphs_for_TG),\n",
+    "\n",
+    "Collects the processed results into data_to_plot,\n",
+    "\n",
+    "And finally calls the proper plotting function (pie_chart, bar_chart, Box_whisker, etc.) to visualize the TG’s composition."
    ]
   },
   {
@@ -935,7 +937,7 @@
     "    print(Grp_datas)\n",
     "    print(y_labels)\n",
     "    print(len(X_labels))\n",
-    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.figure(figsize=(17, 6))\n",
     "    bottoms = [0] * len(X_labels)\n",
     "\n",
     "\n",
@@ -960,7 +962,7 @@
    "source": [
     "def compare_pie_chart(total_grp, label):\n",
     "    \n",
-    "    print(label)\n",
+    "    # print(label)\n",
     "    # Create subplots: 1 row, as many columns as there are charts\n",
     "    fig, axes = plt.subplots(1, len(total_grp), figsize=(10 * len(total_grp), 25))\n",
     "    \n",
@@ -991,22 +993,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TutGNum = 70\n",
-    "graph_type = 'pie'  #'pie' - pie chart 'bar' - Bar graph 'box' - box&whisker\n",
+    "TutGNum = 1\n",
+    "graph_type = 'box'  #'pie' - pie chart 'bar' - Bar graph 'box' - box&whisker\n",
     "\n",
     "\n",
     "def GetgrpsGraphs(TutGNum, graph_type):\n",
     "    no_of_Grps_in_TutG = len(finalAllTgs[TutGNum-1])\n",
     "\n",
-    "    T_list_tg, label_tg, Tg_raw_list = Graphs_for_TG(TutGNum, graph_type)\n",
+    "    T_list_tg, label_tg, Tg_raw_list = Graphs_for_TG(TutGNum)\n",
     "    data_to_plot = []\n",
     "    labels = []\n",
     "\n",
     "\n",
     "    for i in range(0, no_of_Grps_in_TutG):\n",
-    "\n",
+    "        \n",
+    "        \n",
     "        Tut1Grp1 = finalAllTgs[TutGNum-1][i]\n",
-    "        print(f\"For Tutorial Group {TutGNum} - Group {i+1}\")\n",
+    "        #print(Tut1Grp1)\n",
+    "        #print(f\"For Tutorial Group {TutGNum} - Group {i+1}\")\n",
     "        TutGrp_raw = getdataintolist(Tut1Grp1)\n",
     "        T_list_tg_grp,label_tg_grp = data_prep(TutGrp_raw,Tg_raw_list)\n",
     "\n",
@@ -1014,14 +1018,13 @@
     "        if graph_type == 'pie':\n",
     "\n",
     "            data_to_plot.append(T_list_tg_grp[0])\n",
-    "            # pie_chart(T_list_tg_grp[0],label_tg_grp[0])\n",
     "\n",
     "        elif graph_type == 'bar':\n",
     "\n",
     "            data_to_plot.append(T_list_tg_grp[1])\n",
     "            \n",
     "        elif graph_type == 'box':\n",
-    "\n",
+    "            print(T_list_tg_grp[2])\n",
     "            data_to_plot.append(T_list_tg_grp[2])  # group all the CGPA lists to plot later\n",
     "\n",
     "        else:\n",
@@ -1036,10 +1039,11 @@
     "        # plt.pause(0.001)  # let UI update now\n",
     "\n",
     "    elif graph_type == \"bar\":\n",
+    "        bar_chart(T_list_tg[1],label_tg[1])\n",
     "        stacked_bar_chart(data_to_plot,labels,label_tg[1])\n",
     "    else:\n",
+    "        pie_chart(T_list_tg[0],label_tg[0])\n",
     "        compare_pie_chart(data_to_plot,label_tg[0])\n",
-    "        # stacked_bar_chart(data_to_plot,labels,label_tg[0])\n",
     "        \n",
     "\n",
     "GetgrpsGraphs(TutGNum, graph_type)\n",
@@ -1707,6 +1711,13 @@
     "LD_CGPA = [100, [-1]]\n",
     "LD_School = [0, [-1], 0]\n",
     "LD_Gender = [0, [-1], 0]\n",
+    "\n",
+    "\n",
+    "#List to be used for graph later\n",
+    "school_diff_list  = []\n",
+    "gender_diff_list  = []\n",
+    "cgpa_score_list   = []\n",
+    "\n",
     "# Each loop processes 1 TG\n",
     "# note: variable `tg` is -1 of actual Tutorial Group\n",
     "for tg in range(len(allTG_LD)):\n",
@@ -1721,6 +1732,8 @@
     "    current_SchoolD = allTG_LD[tg][\"School\"]\n",
     "    # Calculate difference between TG stats and grp stats\n",
     "    difference = abs(TBestSchLD[tg] - current_SchoolD[1])\n",
+    "    school_diff_list.append(abs(TBestSchLD[tg] - current_SchoolD[1])) #Add to list for graphing\n",
+    "\n",
     "    # Less diverse, so replace\n",
     "    if difference > LD_School[2] or LD_School[1][0] == -1: # need to init the variable in case first comparison has a delta of 0\n",
     "        LD_School = [current_SchoolD[1], [tg+1], difference]\n",
@@ -1733,6 +1746,8 @@
     "    # Calculate difference between TG stats and grp stats, have to convert to male%\n",
     "    maleP = current_GenderD[1] if current_GenderD[0][0][0] else (1 - current_GenderD[1])\n",
     "    difference = abs(allGenderRatio[tg] - maleP)\n",
+    "    gender_diff_list.append(abs(allGenderRatio[tg] - maleP)) #Add to list for graphing\n",
+    "\n",
     "    # Less diverse, so replace\n",
     "    if difference > LD_Gender[2] or LD_Gender[1][0] == -1: # need to init the variable in case first comparison has a delta of 0\n",
     "        LD_Gender = [current_GenderD[1], [tg+1], difference]\n",
@@ -1742,6 +1757,8 @@
     "\n",
     "    # CGPA\n",
     "    current_CGPA = allTG_LD[tg][\"CGPA\"]\n",
+    "    cgpa_score_list.append(current_CGPA[1]) #Add to list for graphing\n",
+    "\n",
     "    # Less diverse, so replace\n",
     "    if current_CGPA[1] < LD_CGPA[0]:\n",
     "        LD_CGPA = [current_CGPA[1], [tg+1]]\n",
@@ -1794,16 +1811,127 @@
    "id": "72e04807-b86c-45f3-9fd8-df44698e9b88",
    "metadata": {},
    "source": [
-    "# Graphical plots and things"
+    "# Graphical plots of School, Gender and CGPA Diversity\n",
+    "\n",
+    "What the Histogram Shows  \n",
+    "\n",
+    "CGPA\t- How evenly distributed academic performance is across groups  \n",
+    "\n",
+    "Gender\t- How balanced the male/female ratio is  \n",
+    "\n",
+    "School\t- How mixed the educational background composition is\\n  \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6eb9efe-9847-49fc-8aff-9764d084d1b9",
+   "id": "23c51253",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#print(school_diff_list)\n",
+    "#print(gender_diff_list)\n",
+    "#print(cgpa_score_list)\n",
+    "\n",
+    "def School_Histogram(School_Diff_Diversity):\n",
+    "    \n",
+    "    # School histogram\n",
+    "    plt.figure(figsize=(12, 10))\n",
+    "    plt.subplot(3, 1, 1)\n",
+    "    plt.hist(School_Diff_Diversity, bins=10, edgecolor='black')\n",
+    "    plt.title(\"Histogram of School Diversity Differences\")\n",
+    "    plt.xlabel(\"Difference from Ideal Diversity\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "        \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "def Gender_Histogram(Gender_Diff_Diversity):\n",
+    "    \n",
+    "    # Gender histogram\n",
+    "    plt.figure(figsize=(12, 10))\n",
+    "    plt.subplot(3, 1, 2)\n",
+    "    plt.hist(Gender_Diff_Diversity, bins=10, edgecolor='black')\n",
+    "    plt.title(\"Histogram of Gender Diversity Differences\")\n",
+    "    plt.xlabel(\"Difference from Ideal Diversity\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "        \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "def CGPA_Histogram(CGPA_Diversity):\n",
+    "    # CGPA histogram\n",
+    "    plt.figure(figsize=(12, 10))\n",
+    "    plt.subplot(3, 1, 3)\n",
+    "    plt.hist(CGPA_Diversity, bins=10, edgecolor='black')\n",
+    "    plt.title(\"Histogram of CGPA Diversity Scores\")\n",
+    "    plt.xlabel(\"Score\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Call School Histogram\n",
+    "School_Histogram(school_diff_list)\n",
+    "\n",
+    "# Call Gender Histogram\n",
+    "Gender_Histogram(gender_diff_list)\n",
+    "\n",
+    "# Call CGPA Histogram\n",
+    "CGPA_Histogram(cgpa_score_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcc9a105",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diversity_histograms(school_diff_list, gender_diff_list, cgpa_score_list):\n",
+    "    plt.figure(figsize=(10, 10))\n",
+    "\n",
+    "    # 1️⃣ School\n",
+    "    plt.subplot(3, 1, 1)\n",
+    "    plt.hist(school_diff_list, bins=10, edgecolor='black', color='#55efc4', alpha=0.8)\n",
+    "    plt.title(\"School Diversity Differences\")\n",
+    "    plt.xlabel(\"Difference from Ideal Diversity\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "    # 2️⃣ Gender\n",
+    "    plt.subplot(3, 1, 2)\n",
+    "    plt.hist(gender_diff_list, bins=10, edgecolor='black', color='#ffeaa7', alpha=0.8)\n",
+    "    plt.title(\"Gender Diversity Differences\")\n",
+    "    plt.xlabel(\"Difference from Ideal Diversity\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "    # 3️⃣ CGPA\n",
+    "    plt.subplot(3, 1, 3)\n",
+    "    plt.hist(cgpa_score_list, bins=10, edgecolor='black', color='#74b9ff', alpha=0.8)\n",
+    "    plt.title(\"CGPA Diversity Scores\")\n",
+    "    plt.xlabel(\"Score\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Call once for all three\n",
+    "diversity_histograms(school_diff_list, gender_diff_list, cgpa_score_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8e10000",
+   "metadata": {},
+   "source": [
+    "# Intepretation\n",
+    "\n",
+    "School histogram: shows how many tutorial groups deviate by certain % from the ideal school mix.\n",
+    "\n",
+    "Gender histogram: shows how balanced groups are by male/female ratio.\n",
+    "\n",
+    "CGPA histogram: shows how academic diversity is distributed across groups."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1845,7 +1973,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1859,7 +1987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
