Added Psuedocode & Edited Table of Contents

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -10,6 +10,7 @@
     "# Table of contents\n",
     "1. [Introduction](#introduction)\n",
     "2. [Decomposition and breakdown](#decomposition)\n",
+    "    1. [Pseudocode](#PSEUDOCODE)\n",
     "3. [Extraction & Analysis of Data Given](#analysisandextracting)\n",
     "    1. [Extracting Data from CSV](#extracting)\n",
     "    2. [Analysis of Data Given](#analysis)\n",
@@ -30,7 +31,9 @@
     "    4. [Printing all the factors and finding the least diverse overall with regards to composition of tutorial group](#sevenfour)\n",
     "        1. [Finding Theoretical best school distribution when disregarding other factors](#sevenfourone)\n",
     "        2. [Calculating gender ratio of every TG group for comparison later](#sevenfourtwo)\n",
-    "    5. [Combining everything for the final result](#sevenfive)"
+    "    5. [Combining everything for the final result](#sevenfive)\n",
+    "    6. [Plotting Diversity of Gender,School and CGPA](#graphical-plots-of-school-gender-and-cgpa-diversity)\n",
+    "    "
    ]
   },
   {
@@ -53,8 +56,81 @@
    "metadata": {},
    "source": [
     "# 2) Decomposition and breakdown <a name=\"decomposition\"></a>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed0f86f4",
+   "metadata": {},
+   "source": [
+    "### 2.1 PSEUDOCODE\n",
+    "#### 🧠 Program Overview — Team Allocation and Diversity Analysis (Pseudocode)\n",
     "\n",
-    "blah blah"
+    "```text\n",
+    "TEAM ALLOCATION AND DIVERSITY ANALYSIS PROGRAM\n",
+    "\n",
+    "START\n",
+    "\n",
+    "LOAD student dataset from CSV file\n",
+    "    Each record → [Name, School, Gender, CGPA, Tutorial Group]\n",
+    "\n",
+    "GROUP students by Tutorial Group → finalAllTgs\n",
+    "\n",
+    "INITIALIZE:\n",
+    "    school_diff_list = []\n",
+    "    gender_diff_list = []\n",
+    "    cgpa_score_list = []\n",
+    "\n",
+    "FOR each Tutorial Group TG in finalAllTgs:\n",
+    "    DIVIDE TG into sub-groups of 5 students each\n",
+    "\n",
+    "    FOR each sub-group in TG:\n",
+    "        EXTRACT member data (School, Gender, CGPA)\n",
+    "        CALCULATE:\n",
+    "            - School proportion within group\n",
+    "            - Gender ratio (Male vs Female)\n",
+    "            - CGPA diversity (range or spread)\n",
+    "        STORE results in data_to_plot\n",
+    "    END FOR\n",
+    "\n",
+    "    COMPARE each group’s diversity against TG average\n",
+    "    COMPUTE difference from ideal diversity for:\n",
+    "        - School → school_diff\n",
+    "        - Gender → gender_diff\n",
+    "        - CGPA → cgpa_score\n",
+    "\n",
+    "    APPEND results to global lists:\n",
+    "        school_diff_list.append(school_diff)\n",
+    "        gender_diff_list.append(gender_diff)\n",
+    "        cgpa_score_list.append(cgpa_score)\n",
+    "END FOR\n",
+    "\n",
+    "IDENTIFY least diverse TGs:\n",
+    "    IF school_diff is highest → update LD_School\n",
+    "    IF gender_diff is highest → update LD_Gender\n",
+    "    IF cgpa_score is lowest → update LD_CGPA\n",
+    "\n",
+    "PRINT summary of least diverse TGs (School, Gender, CGPA)\n",
+    "\n",
+    "FOR selected TG:\n",
+    "    IF graph_type = 'pie' → Show School/Gender composition\n",
+    "    IF graph_type = 'bar' → Show subgroup comparison\n",
+    "    IF graph_type = 'box' → Show CGPA distribution\n",
+    "END FOR\n",
+    "\n",
+    "PRINT final summary:\n",
+    "    - Average diversity per factor\n",
+    "    - TGs with highest deviation\n",
+    "    - Overall fairness conclusion  \n",
+    "\n",
+    "PLOT histograms for all TGs:\n",
+    "    - School diversity differences\n",
+    "    - Gender diversity differences\n",
+    "    - CGPA diversity scores\n",
+    "\n",
+    "\n",
+    "END PROGRAM"
    ]
   },
   {
@@ -179,8 +255,7 @@
     "        list_of_gender1.append(student['Gender'])\n",
     "        list_of_CGPA1.append(student['CGPA'])\n",
     "    raw_list = [list_of_gender1, list_of_school1, list_of_CGPA1]\n",
-    "    return raw_list\n",
-    "\n"
+    "    return raw_list"
    ]
   },
   {
@@ -1946,9 +2021,9 @@
    "id": "1c8b5003",
    "metadata": {},
    "source": [
-    "##### Abhi & Joel challenge for Data analysis and grpahing\n",
     "\n",
-    "Problems with showing two different types of data in one graph for comparision\n",
+    "\n",
+    "- Problems with showing two different types of data in one graph for comparision for data analysis\n",
     "\n"
    ]
   },
