numbered remaining titles & fixed table of contents

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -10,7 +10,7 @@
     "# Table of contents\n",
     "1. [Introduction](#introduction)\n",
     "2. [Decomposition and breakdown](#decomposition)\n",
-    "    1. [Pseudocode](#PSEUDOCODE)\n",
+    "    1. [Pseudocode](#pseudocode)\n",
     "3. [Extraction & Analysis of Data Given](#analysisandextracting)\n",
     "    1. [Extracting Data from CSV](#extracting)\n",
     "    2. [Analysis of Data Given](#analysis)\n",
@@ -32,8 +32,10 @@
     "        1. [Finding Theoretical best school distribution when disregarding other factors](#sevenfourone)\n",
     "        2. [Calculating gender ratio of every TG group for comparison later](#sevenfourtwo)\n",
     "    5. [Combining everything for the final result](#sevenfive)\n",
-    "    6. [Plotting Diversity of Gender,School and CGPA](#graphical-plots-of-school-gender-and-cgpa-diversity)\n",
-    "    "
+    "8. [Graphical Plots](#plots)\n",
+    "    1. [Interpretation of Plots](#interp)\n",
+    "9. [Challenges & Issues](#challenges)\n",
+    "10. [Conclusion](#conc)"
    ]
   },
   {
@@ -41,7 +43,7 @@
    "id": "7f8292ed-0900-433c-9747-8599656be677",
    "metadata": {},
    "source": [
-    "# 1) Introduction <a name=\"introduction\"></a>\n",
+    "# 1) Introduction <a id=\"introduction\"></a>\n",
     "Group members:\n",
     "- Chaehui Kim (M250132)\n",
     "- Eugene Phang (EPHANG002)\n",
@@ -55,7 +57,7 @@
    "id": "1ce1ec75-e2aa-4007-b69b-5bc2b7ad66bb",
    "metadata": {},
    "source": [
-    "# 2) Decomposition and breakdown <a name=\"decomposition\"></a>\n",
+    "# 2) Decomposition and breakdown <a id=\"decomposition\"></a>\n",
     "\n"
    ]
   },
@@ -64,7 +66,7 @@
    "id": "ed0f86f4",
    "metadata": {},
    "source": [
-    "### 2.1 PSEUDOCODE\n",
+    "### 2.1 PSEUDOCODE <a id=\"pseudocode\"></a>\n",
     "#### 🧠 Program Overview — Team Allocation and Diversity Analysis (Pseudocode)\n",
     "\n",
     "```text\n",
@@ -138,7 +140,7 @@
    "id": "5789d277-6b7e-4b5a-9c25-243b8c87dc45",
    "metadata": {},
    "source": [
-    "# 3) Extraction & Analysis of Data Given (records.csv) <a name=\"analysisandextracting\"></a>"
+    "# 3) Extraction & Analysis of Data Given (records.csv) <a id=\"analysisandextracting\"></a>"
    ]
   },
   {
@@ -146,7 +148,7 @@
    "id": "c4316091-7750-413b-8570-ed60f57a1f92",
    "metadata": {},
    "source": [
-    "## 3.1) Extracting Data from CSV <a name=\"extracting\"></a>"
+    "## 3.1) Extracting Data from CSV <a id=\"extracting\"></a>"
    ]
   },
   {
@@ -214,7 +216,7 @@
    "id": "098e3faa-0d99-4d10-9919-4f826aa5a00b",
    "metadata": {},
    "source": [
-    "## 3.2) Analysis of Data <a name=\"analysis\"></a>"
+    "## 3.2) Analysis of Data <a id=\"analysis\"></a>"
    ]
   },
   {
@@ -487,7 +489,7 @@
    "id": "2105bc3b-93b9-4852-b156-aa442b957d3d",
    "metadata": {},
    "source": [
-    "# 4) Design of Algorithm <a name=\"design\"></a>"
+    "# 4) Design of Algorithm <a id=\"design\"></a>"
    ]
   },
   {
@@ -495,7 +497,7 @@
    "id": "cf0b0544-ed88-4f8b-9c9a-a1c434fff351",
    "metadata": {},
    "source": [
-    "## 4.1) Sorting Priorities <a name=\"priorities\"></a>\n",
+    "## 4.1) Sorting Priorities <a id=\"priorities\"></a>\n",
     "1. School\n",
     "2. CGPA\n",
     "3. Gender\n",
@@ -514,7 +516,7 @@
    "id": "da4d27eb-59fa-49fc-bc9e-f48a354d374c",
    "metadata": {},
    "source": [
-    "## 4.2) Group Sizes <a name=\"sizes\"></a>\n",
+    "## 4.2) Group Sizes <a id=\"sizes\"></a>\n",
     "Currently, we are given a simplified version of the problem in which the desired number of students per group ($n$) is $5$ and the existing dataset contains a total of $6000$ students. Since $5|6000$, we can safely make $\\frac{6000}{5}=1200$ equal groups of $5$. However, in an extension of this problem, the professor may specify $n$ that does not exactly divide the total number of students in a given dataset.\n",
     "\n",
     "In this case, we decided to handle the remainder students ($r$) by distributing them, one to each existing group, with the condition that the number of groups with $n$ students is greater than the number of groups with $n+1$ students. In other words, we distribute the students $\\text{if }r<\\frac{total}{2n}$ (Case 1), else create a separate group of size $r$ (Case 2).\n",
@@ -553,7 +555,7 @@
    "id": "c3bb9efe-afdb-4ce5-a4c9-dc5c0c7e9a6e",
    "metadata": {},
    "source": [
-    "## 4.3) Brainstorming: Individual Modular Diversification of Factors <a name=\"modular\"></a>"
+    "## 4.3) Brainstorming: Individual Modular Diversification of Factors <a id=\"modular\"></a>"
    ]
   },
   {
@@ -569,7 +571,7 @@
    "id": "c94045fa-6d78-4439-b2bd-af88fcdc426a",
    "metadata": {},
    "source": [
-    "### 4.3.1) Considering School Frequency: Diversifying School <a name=\"school\"></a>\n",
+    "### 4.3.1) Considering School Frequency: Diversifying School <a id=\"school\"></a>\n",
     "To ensure that people in all schools are distributed diversely, we must distribute students in the order of the frequency of their respective schools in the population dataset. In other words, students belonging to schools with a higher number of representatives are distributed first, and those from smaller schools are assigned later.\n",
     "\n",
     "This approach is logical because schools with larger student counts have a higher likelihood of forming clusters if they are left unregulated. By prioritizing their distribution early, we prevent these large groups from dominating the later stages of assignment, where additional lower priority constraints that are unrelated to school affiliation will take effect. At that point, having students from smaller schools remaining is less risky to diversity than if a large concentration of students from the same school were left unassigned.\n",
@@ -639,7 +641,7 @@
    "id": "98f2eb76-b0c0-4a93-83aa-8e6ed94b8400",
    "metadata": {},
    "source": [
-    "### 4.3.2) Buckets & Cyclic Round-Robin: Diversifying CGPA <a name=\"cgpa\"></a>\n",
+    "### 4.3.2) Buckets & Cyclic Round-Robin: Diversifying CGPA <a id=\"cgpa\"></a>\n",
     "To ensure that each group includes a range of CGPAs, we can implement a kind of round-robin distribution. \n",
     "\n",
     "To do this, we first sort the group of students in descending order of CGPA, and partition them into approximately homogeneous GPA \"buckets\" so that we can intuitively label them as ex. \"low-GPA\", \"mid-GPA\", \"high-GPA\", etc. \n",
@@ -715,7 +717,7 @@
    "id": "6c56528e-3adb-4d1a-92a1-86437153aa58",
    "metadata": {},
    "source": [
-    "### 4.3.3) Diversifying Gender <a name=\"gender\"></a>"
+    "### 4.3.3) Diversifying Gender <a id=\"gender\"></a>"
    ]
   },
   {
@@ -793,7 +795,7 @@
    "id": "ffac2bf3-4ac9-49ae-9df1-80faa0f22410",
    "metadata": {},
    "source": [
-    "# 5) Sorting Algorithm <a name=\"algo\"></a>"
+    "# 5) Sorting Algorithm <a id=\"algo\"></a>"
    ]
   },
   {
@@ -951,7 +953,7 @@
    "id": "d72a4d7a-2a77-48dc-b97e-f13cdc6fb2bf",
    "metadata": {},
    "source": [
-    "# 6) Converting Back & Post-Analysis <a name=\"post\"></a>"
+    "# 6) Converting Back & Post-Analysis <a id=\"post\"></a>"
    ]
   },
   {
@@ -989,7 +991,7 @@
    "id": "8c2d2df1",
    "metadata": {},
    "source": [
-    "# Takes a specific Tutorial Group number (e.g., TG 1) and a chosen graph type ('pie', 'bar', or 'box').\n",
+    "### Takes a specific Tutorial Group number (e.g., TG 1) and a chosen graph type ('pie', 'bar', or 'box').\n",
     "\n",
     "Extracts data for each sub-group inside that TG,\n",
     "\n",
@@ -1196,7 +1198,7 @@
    "id": "6621cf19-f6f4-455a-8de7-0faab6c23a4f",
    "metadata": {},
    "source": [
-    "## 7.1 Finding the diversity of a single factor of a single group<a id='sevenone'></a>\n",
+    "## 7.1) Finding the diversity of a single factor of a single group<a id='sevenone'></a>\n",
     "Required data: list of students in the group, required factor of the student\n",
     "<br>\n",
     "Output: The number for diversity\n",
@@ -1298,7 +1300,7 @@
    "id": "535dea59-6582-4a07-8968-2636101a2978",
    "metadata": {},
    "source": [
-    "### 7.1.1 CGPA case <a id='sevenoneone'></a>\n",
+    "### 7.1.1) CGPA case <a id='sevenoneone'></a>\n",
     "But this does not work for CGPA, for that we want to find the mean, range, and midrange instead\n",
     "If we use only mean, a majority of high CGPA with a very low CGPA will result in a medium CGPA, this can be solved by looking at midrange, where a high difference between midrange and mean will show that this is happening\n",
     "However, even with these two, a group will all medium CGPAs will also result in medium mean, and low midrange difference, therefore we add range to determine that this is happening if the range is small.\n",
@@ -1467,7 +1469,7 @@
    "id": "16225eae-6d74-4f94-b072-0f2063ba8f3d",
    "metadata": {},
    "source": [
-    "## 7.2 Calculating the factors for each group <a id='seventwo'></a>\n",
+    "## 7.2) Calculating the factors for each group <a id='seventwo'></a>\n",
     "Combine all the previous functions together to obtain the data for the least diverse of each factor and which group(s) they belong to"
    ]
   },
@@ -1593,7 +1595,7 @@
    "id": "1e42e1b5-64a7-4f30-9695-11b8c7751e0a",
    "metadata": {},
    "source": [
-    "## 7.3 Calculating for every tutorial group <a id='seventhree'></a>\n",
+    "## 7.3) Calculating for every tutorial group <a id='seventhree'></a>\n",
     "Calculate and print out the results for every group in every tutorial group\n",
     "Also collects the lowest diversity results of every tutorial group for later use"
    ]
@@ -1650,7 +1652,7 @@
    "id": "b87a5fd6-c9d0-49c7-9851-36483167b87f",
    "metadata": {},
    "source": [
-    "## 7.4 Printing all the factors and finding the least diverse overall with regards to composition of tutorial group <a id='sevenfour'></a>\n",
+    "## 7.4) Printing all the factors and finding the least diverse overall with regards to composition of tutorial group <a id='sevenfour'></a>\n",
     "Requires getting the statistics of the overall tutorial group to compare with the group"
    ]
   },
@@ -1670,7 +1672,7 @@
    "id": "f05a1390-24f4-477c-b40b-befbedb5bc5a",
    "metadata": {},
    "source": [
-    "### 7.4.1 Finding Theoretical best school distribution when disregarding other factors <a id='sevenfourone'></a>"
+    "### 7.4.1) Finding Theoretical best school distribution when disregarding other factors <a id='sevenfourone'></a>"
    ]
   },
   {
@@ -1747,7 +1749,7 @@
    "id": "17996874-1285-4462-bf99-bfda0e15465e",
    "metadata": {},
    "source": [
-    "### 7.4.2 Calculating gender ratio of every TG group for comparison later <a id='sevenfourtwo'></a>"
+    "### 7.4.2) Calculating gender ratio of every TG group for comparison later <a id='sevenfourtwo'></a>"
    ]
   },
   {
@@ -1770,7 +1772,7 @@
    "id": "cf2317bb-8cab-4a61-96b8-1241b990fed4",
    "metadata": {},
    "source": [
-    "## 7.5 Combining everything to print the least diverse of every tutorial group and additionally least diverse overall with respect to difference from tutorial group <a id='sevenfive'></a>"
+    "## 7.5) Combining everything to print the least diverse of every tutorial group and additionally least diverse overall with respect to difference from tutorial group <a id='sevenfive'></a>"
    ]
   },
   {
@@ -1886,7 +1888,7 @@
    "id": "72e04807-b86c-45f3-9fd8-df44698e9b88",
    "metadata": {},
    "source": [
-    "# Graphical plots of School, Gender and CGPA Diversity\n",
+    "# 8) Graphical plots of School, Gender and CGPA Diversity <a id='plots'></a>\n",
     "\n",
     "What the Histogram Shows  \n",
     "\n",
@@ -1999,7 +2001,7 @@
    "id": "e8e10000",
    "metadata": {},
    "source": [
-    "# Intepretation\n",
+    "# 8.1) Intepretation <a id='interp'></a>\n",
     "\n",
     "School histogram: shows how many tutorial groups deviate by certain % from the ideal school mix.\n",
     "\n",
@@ -2013,7 +2015,7 @@
    "id": "3fbf2a01-942a-4e21-ac2f-d10787a27347",
    "metadata": {},
    "source": [
-    "# Challenges and Issues"
+    "# 9) Challenges and Issues <a id='challenges'></a>"
    ]
   },
   {
@@ -2042,13 +2044,13 @@
    "id": "683b2fee-bc9c-416a-8148-c5ee91547f34",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "# 10) Conclusion <a id='conc'></a>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2062,7 +2064,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
