minor changes to wording & headings

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -66,8 +66,7 @@
    "id": "ed0f86f4",
    "metadata": {},
    "source": [
-    "### 2.1 PSEUDOCODE <a id=\"pseudocode\"></a>\n",
-    "#### 🧠 Program Overview — Team Allocation and Diversity Analysis (Pseudocode)\n",
+    "### 2.1) Pseudocode <a id=\"pseudocode\"></a>\n",
     "\n",
     "```text\n",
     "TEAM ALLOCATION AND DIVERSITY ANALYSIS PROGRAM\n",
@@ -238,7 +237,7 @@
    "id": "05ec0e98",
    "metadata": {},
    "source": [
-    "So we group all the data we need into a list"
+    "To do this, we group the data into a list as such:"
    ]
   },
   {
@@ -444,7 +443,7 @@
    "source": [
     "Function to show graphs of individual tutorial groups\n",
     "\n",
-    "Change number in Graphs_for_TG(x), where **x** represents the tut grp"
+    "Change number in Graphs_for_TG(x), where **x** represents the tutorial grp"
    ]
   },
   {
