added input thing for prof

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -895,14 +895,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "94835194-c9f8-4f7f-9cb8-423c7d09177f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "input_n = widgets.IntText(value=5, description='Enter desired number of students per group:', disabled=False)\n",
+    "display(input_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0c730f1-f500-4195-a190-1a1cb4824269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = input_n.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "39ef2bf3-0c76-443a-8194-b779815ae4e2",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "n = 7\n",
-    "\n",
     "finalAllTgs = []\n",
     "# Apply algorithm separately to each TG \n",
     "all_tgs = sorted(set(s['TG'] for s in studentData))\n",
