--- a/Main.ipynb
+++ b/Main.ipynb
@@ -11,6 +11,7 @@
     "1. [Introduction](#introduction)\n",
     "2. [Decomposition and breakdown](#decomposition)\n",
     "    1. [Pseudocode](#pseudocode)\n",
+    "    2. [Flowchart](#flowchart)\n",
     "3. [Extraction & Analysis of Data Given](#analysisandextracting)\n",
     "    1. [Extracting Data from CSV](#extracting)\n",
     "    2. [Analysis of Data Given](#analysis)\n",
@@ -132,6 +133,16 @@
     "\n",
     "\n",
     "END PROGRAM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f913582f-57d0-4429-97b0-1175616945b9",
+   "metadata": {},
+   "source": [
+    "## 2.2) Flowchart <a id=\"flowchart\"></a>\n",
+    "\n",
+    "![flowchart](.\\assets\\Flowchart2.png)"
    ]
   },
   {
@@ -980,30 +991,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "239672c9-933d-4b99-8d3e-6538fc3d007f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def writeLine(line): #shortened function that adds a string to csv\n",
-    "    print(line, file = processedFile) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "61e83316",
    "metadata": {},
    "outputs": [],
    "source": [
-    "processedFile = open(\"FCS4_Team2_JohnSmith.csv\", \"w\")\n",
-    "fileHeader.append(\"Team Assigned\") #adds a column to header line\n",
-    "writeLine(','.join(fileHeader))   #combines file header list into a string where each column is separated by a \",\"\n",
+    "processedFile = open(\"FCS4_Team2_EugenePhang.csv\", \"w\")\n",
+    "fileHeader.append(\"Team Assigned\\n\") #adds a column to header line\n",
+    "processedFile.write(','.join(fileHeader))   #combines file header list into a string where each column is separated by a \",\"\n",
     "\n",
     "for tutGrp in finalAllTgs:\n",
     "    for grpNum, group in enumerate(tutGrp, start=1):\n",
     "        for student in group: #on each iteration adds a student's data to csv\n",
-    "            row = f\"G-{student['TG']},{student['ID']},{student['School']},{student['Name']},{'Male' if student['Gender'] else 'Female'},{student['CGPA']},{grpNum}\"\n",
-    "            writeLine(row)\n",
+    "            row = f\"G-{student['TG']},{student['ID']},{student['School']},{student['Name']},{'Male' if student['Gender'] else 'Female'},{student['CGPA']},{grpNum}\\n\"\n",
+    "            processedFile.write(row)\n",
     "processedFile.close()"
    ]
   },
@@ -2207,7 +2207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
