--- a/Main.ipynb
+++ b/Main.ipynb
@@ -142,7 +142,15 @@
    "source": [
     "## 2.2) Flowchart <a id=\"flowchart\"></a>\n",
     "\n",
-    "![flowchart](.\\assets\\Flowchart2.png)"
+    "![flowchart](assets/Flowchart2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "443993c1-abd9-4fce-8982-ef78362591f2",
+   "metadata": {},
+   "source": [
+    "##2.3) "
    ]
   },
   {
@@ -2139,6 +2147,15 @@
     "\n",
     "- Problems with showing two different types of data in one graph for comparision for data analysis\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3bb6498-05d6-4611-84ae-86e07adaa79b",
+   "metadata": {},
+   "source": [
+    "- Difficult to find an optimal way to format the student data\n",
+    "- "
    ]
   },
   {
