--- a/Main.ipynb
+++ b/Main.ipynb
@@ -64,79 +64,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed0f86f4",
-   "metadata": {},
-   "source": [
-    "## 2.1) Pseudocode <a id=\"pseudocode\"></a>\n",
-    "\n",
-    "```text\n",
-    "TEAM ALLOCATION AND DIVERSITY ANALYSIS PROGRAM\n",
-    "\n",
-    "START\n",
-    "\n",
-    "LOAD student dataset from CSV file\n",
-    "    Each record → [Name, School, Gender, CGPA, Tutorial Group]\n",
-    "\n",
-    "GROUP students by Tutorial Group → finalAllTgs\n",
-    "\n",
-    "INITIALIZE:\n",
-    "    school_diff_list = []\n",
-    "    gender_diff_list = []\n",
-    "    cgpa_score_list = []\n",
-    "\n",
-    "FOR each Tutorial Group TG in finalAllTgs:\n",
-    "    DIVIDE TG into sub-groups of 5 students each\n",
-    "\n",
-    "    FOR each sub-group in TG:\n",
-    "        EXTRACT member data (School, Gender, CGPA)\n",
-    "        CALCULATE:\n",
-    "            - School proportion within group\n",
-    "            - Gender ratio (Male vs Female)\n",
-    "            - CGPA diversity (range or spread)\n",
-    "        STORE results in data_to_plot\n",
-    "    END FOR\n",
-    "\n",
-    "    COMPARE each group’s diversity against TG average\n",
-    "    COMPUTE difference from ideal diversity for:\n",
-    "        - School → school_diff\n",
-    "        - Gender → gender_diff\n",
-    "        - CGPA → cgpa_score\n",
-    "\n",
-    "    APPEND results to global lists:\n",
-    "        school_diff_list.append(school_diff)\n",
-    "        gender_diff_list.append(gender_diff)\n",
-    "        cgpa_score_list.append(cgpa_score)\n",
-    "END FOR\n",
-    "\n",
-    "IDENTIFY least diverse TGs:\n",
-    "    IF school_diff is highest → update LD_School\n",
-    "    IF gender_diff is highest → update LD_Gender\n",
-    "    IF cgpa_score is lowest → update LD_CGPA\n",
-    "\n",
-    "PRINT summary of least diverse TGs (School, Gender, CGPA)\n",
-    "\n",
-    "FOR selected TG:\n",
-    "    IF graph_type = 'pie' → Show School/Gender composition\n",
-    "    IF graph_type = 'bar' → Show subgroup comparison\n",
-    "    IF graph_type = 'box' → Show CGPA distribution\n",
-    "END FOR\n",
-    "\n",
-    "PRINT final summary:\n",
-    "    - Average diversity per factor\n",
-    "    - TGs with highest deviation\n",
-    "    - Overall fairness conclusion  \n",
-    "\n",
-    "PLOT histograms for all TGs:\n",
-    "    - School diversity differences\n",
-    "    - Gender diversity differences\n",
-    "    - CGPA diversity scores\n",
-    "\n",
-    "\n",
-    "END PROGRAM"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f913582f-57d0-4429-97b0-1175616945b9",
    "metadata": {},
    "source": [
@@ -283,7 +210,11 @@
    "id": "53e0a365",
    "metadata": {},
    "source": [
-    "A function to prep data to put a List conatining lists of Gender, School, CGPA only their labels excluding CGPA cause no label needed"
+    "Converting CGPA list to Float for Boxplots   \n",
+    "Converting the Boolean Gender List into Male and Female so i can extract out the labels for Pie charts   \n",
+    "\n",
+    "Counting how many schools/gender there are   \n",
+    "for schools we either count against another data for example a tut grp against the whole school to show which courses are missing from the tut grp else ignoring the missing schools in the tut grp when plotting   "
    ]
   },
   {
@@ -2210,7 +2141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2224,7 +2155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
